--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,369 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 body {
+  font-family: 'Noto Sans', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html{
+  box-sizing: border-box;
+}
+
+*,*:before, *:after {
+  box-sizing: inherit;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:root{
+  --text-color: #3A3D4F;
+}
+
+.wrapper{
+  margin: 0 auto;
+  overflow: hidden;
+  overflow-y:hidden;
+}
+
+
+.card-home{
+  position:absolute;
+  top:0;
+  animation: scroll 18s linear 1s infinite;
+  overflow:hidden;
+
+  display:flex;
+  flex-direction: column;
+  
+}
+
+.card-home2{
+  position:absolute;
+  top:0;
+  animation: scroll 12s linear 1s infinite;
+  overflow:hidden;
+
+  margin-left: 185px;
+
+  display:flex;
+  flex-direction: column;
+}
+
+.card-home3{
+  position:absolute;
+  top:0;
+  animation: scroll 15s linear 1s infinite;
+  overflow:hidden;
+
+  margin-left: 370px;
+
+  display:flex;
+  flex-direction: column;
+}
+
+.imagemain{
+  grid-area: imagemain;
+  margin: 0 auto;
+  height: 728px;
+
+  width: 520px;
+  max-width: 600px;
+
+  clip-path: inset(0px 0px 0px 0px);
+}
+
+.card {
+  width: 150px;
+  margin-bottom: 1rem;
+}
+
+
+/* @keyframes scroll {
+  from {bottom: 0px;}
+  to {top: -300px;;}
+} */
+
+
+.bg {
+  z-index: -2;
+  background-image: url("../src/assets/bg.jpg");
+  background-repeat: no-repeat;
+  overflow: hidden;
+  height: 728px;
+  overflow-y:hidden!important;
+}
+
+.main {
+  z-index: -2;
+  margin: 0 auto;
+  align-items: center;
+  max-width: 1200px;
+  
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+
+  grid-template-areas:"text imagemain";
+  overflow-y:hidden;
+}
+
+
+
+.main-text{
+  color: white;
+  max-width: 570px;
+  grid-area: text;
+}
+
+h1{
+  font-size: 56px;
+}
+h4{
+  font-size: 22px;
+}
+
+.text_description{
+  font-size: 16px;
+}
+
+
+/* section */
+.section {
+  margin: 0 auto;
+  align-items: flex-start;
+  max-width: 1200px;
+  height: 50vh;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+
+  grid-template-areas:
+  "partidos-text 0 "
+  "partidos locales ";
+
+  color:  var(--text-color);
+}
+
+.partidos-text{
+  grid-area: partidos-text;
+}
+
+.section-title{
+  margin-top: 2rem;
+  font-size: 1.2rem;
+
+}
+
+.subtitle{
+  font-size: 43px;
+  margin: 0;
+  font-weight: 200;
+}
+
+.partido-logo{
+  width: 90px;
+  margin: 0.5rem 1rem 0 0;
+}
+
+.partidos-locales{
+  grid-area: locales;
+}
+
+
+.partidos{
+  grid-area: partidos;
+}
+
+
+
+@media (max-width: 1200px) {
+
+  .main-text{
+    margin-left: 2rem;
+  }
+
+  .card {
+    width: 120px;
+  }
+
+  .card-home{
+    margin-left: 25px;
+  }
+
+  .card-home2{
+    margin-left: 160px;
+  }
+
+  .card-home3{
+    margin-left: 295px;
+  }
+
+  .wrapper{
+    width: 100%;
+  }
+  
+.imagemain{
+  margin: 0 auto;
+  clip-path: inset(0px -100px 0px -100px);
+}
+
+
+.section {
+  margin: 0 auto;
+  align-items: flex-start;
+  max-width: 800px;
+  height: 50vh;
+
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  
+  margin-top: 6rem;
+  margin-bottom: 12rem;
+
+  grid-template-areas:
+  "partidos-text "
+  "partidos"
+  "locales";
+}
+
+.partidos-locales{
+  margin-bottom: 5rem;
+}
+
+
+}
+
+@media (max-width: 1024px) {
+  .main {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "imagemain"
+      "text";
+  }
+
+  .imagemain{
+    margin: 0 auto;
+    height: 550px;
+    width: 100%;
+  }
+
+  .main-text{
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .bg {
+    background-repeat: round;
+    height: 90vh;
+  }
+
+  .text_description{
+    font-size: 14px;
+    margin-bottom: 3rem;
+  }
+
+  .card-home{
+    margin-left: 100px;
+  }
+
+  .card-home2{
+    margin-left: 250px;
+  }
+
+  .card-home3{
+    margin-left: 400px;
+  }
+
+  .section {
+    
+    margin: 2rem 1rem 10rem 1rem;
+  
+    grid-template-areas:
+    "partidos-text "
+    "partidos"
+    "locales";
+  }
+
+}
+
+@media (max-width: 600px) {
+
+  h1{
+    font-size: 36px;
+    margin: 2rem 2rem 0 2rem;
+  }
+
+  h4{
+    font-size: 18px;
+    margin: 1rem 2rem 0 2rem;
+  }
+  
+  .text_description{
+    font-size: 14px;
+    margin: 2rem;
+  }
+  
+
+  .card {
+    width: 100px;
+  }
+
+  .card-home{
+    margin-left: 100px;
+  }
+
+  .card-home2{
+    margin-left: 210px;
+  }
+
+  .card-home3{
+    margin-left: 320px;
+  }
+
+
+}
+
+@media (max-width: 375px) {
+
+  h1{
+    font-size: 32px;
+    margin-top: 2rem;
+    
+  }
+
+  h4{
+    font-size: 16px;
+    margin: 1rem 2rem 0 2rem;
+  }
+  
+  .text_description{
+    font-size: 14px;
+    margin: 2rem;
+  }
+
+  .card {
+    width: 100px;
+  }
+
+  .card-home{
+    margin-left: 25px;
+  }
+
+  .card-home2{
+    margin-left: 140px;
+  }
+
+  .card-home3{
+    margin-left: 250px;
+  }
+
 }
