--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
 @import "../src/estilos/qrvota.css";
 @import "../src/estilos/diputados.css";
 @import "../src/estilos/squarelink.css";
+@import "../src/estilos/sugerencias.css";
+@import "../src/estilos/denuncias.css";
+@import "../src/estilos/header.css";
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
