--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
 @import "../src/estilos/denuncias.css";
 @import "../src/estilos/header.css";
 @import "../src/estilos/menu.css";
+@import "../src/estilos/banner.css";
+@import "../src/estilos/distritos.css";
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
