--- a/src/estilos/diputados.css
+++ b/src/estilos/diputados.css
@@ -18,6 +18,7 @@
 
 .card_diputados{
     width: 250px;
+
     display: inline-block;
     flex: 0 0 auto;
     transition:  transform 450ms;
@@ -25,6 +26,7 @@
     grid-area: card_diputado;
     margin-bottom: 2rem;
     margin-right: 1rem;
+    object-fit: contain;
 }
 
 .card_diputados:hover {
@@ -32,9 +34,10 @@
 }
 
 .card_diputados img {
-    object-fit: contain;
+    object-fit: cover;
     border-radius: 20px;
     width: 100%;
+    height: 300px;
 }
 
 .diputados-text{
@@ -93,7 +96,7 @@
     }
     .card_diputados{
         width: 230px;
-        margin: 1rem 1rem 3rem 0rem;
+        margin: 1rem 0.5rem 3rem 0.5rem;
         display: inline-block;
         flex: 0 0 auto;
         transition:  transform 450ms;
