--- a/src/estilos/distritos.css
+++ b/src/estilos/distritos.css
@@ -114,7 +114,7 @@
         margin-top: 2rem;
         display: flex;
         justify-content: center;
-        align-items:center;
+        align-items:flex-start;
         flex-wrap: wrap;
     }
 
