--- a/src/estilos/diputados.css
+++ b/src/estilos/diputados.css
@@ -76,6 +76,7 @@
 }
     
 @media (max-width: 1024px) {
+    
     .diputados_list{
         width: auto;
         margin-right: 1rem;
@@ -84,7 +85,7 @@
     }
     .card_diputados{
         width: 250px;
-        margin: 1rem 1rem 0 0; 
+        margin: 2rem 1rem 0 0; 
     }
 }
     
@@ -94,22 +95,25 @@
         padding: 1rem;
         margin: 0 auto;
     }
+
     .card_diputados{
-        width: 230px;
+        width: 200px;
         margin: 1rem 0.5rem 3rem 0.5rem;
         display: inline-block;
         flex: 0 0 auto;
         transition:  transform 450ms;
     }   
+
+    
     
 }
     
-@media (max-width: 375px) {
+@media (max-width: 425px) {
     .diputados_list{
         margin: 0 auto;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
     }
     .card_diputados{
