--- a/src/estilos/gobernador.css
+++ b/src/estilos/gobernador.css
@@ -43,17 +43,16 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-
 }
 
 .info_partido{
-    margin: 1rem 0 0 0;
+    margin: 0.3rem 0 0 0;
     color: gray;
 }
 
 .card_people{
     width: 300px;
-    margin-right: 1rem;
+    margin: 1rem;
     display: inline-block;
     flex: 0 0 auto;
     transition:  transform 450ms;
@@ -72,10 +71,13 @@
 .gob_list{
     max-width: 1200px;
     margin: 0 auto;
+    margin-top: 2rem;
+    
     display: flex;
+    justify-content: flex-start;
+    align-items:flex-start;
+    flex-wrap: wrap;
 
-    overflow-x: scroll;
-    overflow-y: hidden;
     padding: 1rem;
     margin-bottom: 5rem;
 }
@@ -100,11 +102,20 @@
 @media (max-width: 1024px) {
     .gobernador-text{
         margin: 1rem;
-
     }
+
     .gob_list{
         margin: 1rem;
         margin-bottom: 5rem;
+
+        justify-content: flex-start;
+        align-items:flex-start;
+    }
+
+    .card_people{
+        width: 250px;
+        margin: 1rem 1rem 1.3rem 0rem;
+
     }
   
 }
@@ -112,13 +123,17 @@
 @media (max-width: 600px) {
 
     .card_people{
-        width: 240px;
-        margin-right: 1rem;
-        display: inline-block;
-        flex: 0 0 auto;
-        transition:  transform 450ms;
+        width: 200px;
+        margin-right: 0rem;
     }
-    
+
+    .gob_list{
+        margin: 1rem;
+        margin-bottom: 5rem;
+
+        justify-content: space-around;
+        align-items: flex-start;
+    }
     
 }
     
