--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 @import "../src/estilos/menu.css";
 @import "../src/estilos/banner.css";
 @import "../src/estilos/distritos.css";
+@import "../src/estilos/candidato_screen.css";
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
