--- a/src/estilos/candidato_screen.css
+++ b/src/estilos/candidato_screen.css
@@ -18,8 +18,10 @@
 }
 
 .image-profile{
+    object-fit: cover;
     grid-area: image;
-    width: 300px;
+    width: 380px;
+    height: 480px;
     border-radius: 2rem;
     justify-self: center;
 }
@@ -34,6 +36,21 @@
     font-size: 1.2rem;
     font-weight: 800;
     margin-bottom: 0;
+}
+
+.redes a{
+    text-decoration: none;
+    cursor: pointer;
+    margin: 0 2rem 0 0;
+    color: #0D1B35;
+    font-weight: 600;
+    font-style: italic;
+}
+
+.redes a:hover{
+    text-decoration:underline;
+    color: rgb(78, 5, 138);
+
 }
 
 .name{
